[package]
name = "github-issues-export"
version = "0.1.2"
authors = ["boxdot <d@zerovolt.org>"]
description = "Export GitHub issues to markdown files."
license = "MIT/Apache-2.0"
repository = "https://github.com/boxdot/github-issues-export-rs"
keywords = ["markdown", "github", "issues"]
categories = ["command-line-utilities"]
readme = "README.md"

[badges]
travis-ci = { repository = "boxdot/github-issues-export-rs" }

[dependencies]
docopt = "0.8"
error-chain = "0.11"
futures = "0.1"
handlebars = "0.29"
hyper = "0.11"
hyper-tls = "0.1"
native-tls = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slug = "0.1"
tokio-core = "0.1"
